--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,9 @@
     --fs-body: 1.125rem;
   }
 }
+/*****************
+* General Styles
+*****************/
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -35,6 +38,29 @@ body {
 
 section {
   padding: 5em 2em;
+}
+
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  padding: 0.5em 2.5em;
+  background: var(--clr-accent);
+  color: var(--clr-dark);
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: var(--fw-bold);
+  transition: transform 200ms ease-in-out;
+}
+.btn:hover {
+  transform: scale(1.1);
 }
 
 /*************
@@ -125,6 +151,69 @@ strong {
     left: -1.5em;
     width: calc(100% + 1.5em);
   }
+}
+/*****************
+* Skills Section
+*****************/
+.skills {
+  background-color: var(--clr-dark);
+  background-image: url(../images/services-bg.jpg);
+  background-size: cover;
+  color: var(--clr-light);
+  text-align: center;
+}
+.skills .icons-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  gap: 5%;
+  max-width: 930px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 6em;
+}
+.skills .icons-container__icon {
+  background-color: white;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  border: 5px solid black;
+  border-radius: 10px;
+  transition: transform 200ms ease-in-out;
+}
+.skills .icons-container__icon:hover {
+  transform: scale(1.1);
+}
+.skills .icons-container__icon img {
+  max-height: 100%;
+}
+
+@media (min-width: 620px) {
+  .skills .icons-container {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 7%;
+  }
+}
+@media (min-width: 750px) {
+  .skills .icons-container {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 10%;
+  }
+}
+.section__title--skills {
+  color: var(--clr-accent);
+  position: relative;
+}
+
+.section__title--skills::after {
+  content: "";
+  display: block;
+  width: 2em;
+  height: 1px;
+  margin: 0.5em auto 1em;
+  background: var(--clr-light);
+  opacity: 0.25;
 }
 
 /*# sourceMappingURL=style.css.map */
