--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,11 @@ strong {
 .section__subtitle--intro {
   text-transform: uppercase;
 }
+.section__subtitle--projects {
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+  margin-bottom: 2em;
+}
 
 /****************
 * Intro Section
@@ -277,6 +282,64 @@ strong {
     max-width: 1420px;
     grid-template-columns: 1fr 350px;
   }
+}
+/*******************
+* Projects Section
+*******************/
+.projects {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  text-align: center;
+}
+
+.portfolio {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.portfolio__item {
+  background: var(--clr-accent);
+  overflow: hidden;
+}
+.portfolio__item:focus {
+  position: relative;
+  z-index: 2;
+}
+.portfolio__img {
+  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+}
+.portfolio__img:hover {
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+
+/*********
+* Footer
+*********/
+.footer {
+  background: #111;
+  color: var(--clr-accent);
+  text-align: center;
+  padding: 1em 0;
+  font-size: var(--fs-h2);
+}
+.footer a {
+  color: inherit;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+.social-list__item {
+  margin: 0 1em;
+}
+.social-list__link {
+  padding: 0.5em;
+}
+.social-list__link:hover {
+  opacity: 0.7;
 }
 
 /*# sourceMappingURL=style.css.map */
