Improve navigation for larger screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,11 @@ header {
   transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
 }
 
+@media (min-width: 930px) {
+  .nav {
+    left: 70%;
+  }
+}
 .nav__list {
   list-style: none;
   display: flex;
