--- a/styles/style.css
+++ b/styles/style.css
@@ -152,12 +152,6 @@ header {
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
 }
-
-@media (min-width: 930px) {
-  .nav {
-    left: 70%;
-  }
-}
 .nav__list {
   list-style: none;
   display: flex;
@@ -168,18 +162,21 @@ header {
   margin: 0;
   padding: 0;
 }
-
 .nav__link {
   color: inherit;
   font-weight: var(--fw-bold);
   font-size: var(--fs-h2);
   text-decoration: none;
 }
-
 .nav__link:hover {
   color: var(--clr-accent);
 }
 
+@media (min-width: 930px) {
+  .nav {
+    left: 70%;
+  }
+}
 .nav-toggle {
   padding: 0.5em;
   background: transparent;
@@ -194,26 +191,17 @@ header {
 .nav-open .nav {
   transform: translateX(0);
 }
-
 .nav-open .nav-toggle {
   position: fixed;
 }
-
 .nav-open .hamburger {
   transform: rotate(0.625turn);
 }
-
 .nav-open .hamburger::before {
   transform: rotate(90deg) translateX(-6px);
 }
-
 .nav-open .hamburger::after {
   opacity: 0;
-}
-
-.hamburger {
-  display: block;
-  position: relative;
 }
 
 .hamburger,
@@ -226,18 +214,19 @@ header {
   transition: transform 250ms ease-in-out;
 }
 
-.hamburger::before,
-.hamburger::after {
+.hamburger {
+  display: block;
+  position: relative;
+}
+.hamburger::before, .hamburger::after {
   content: "";
   position: absolute;
   left: 0;
   right: 0;
 }
-
 .hamburger::before {
   top: 6px;
 }
-
 .hamburger::after {
   bottom: 6px;
 }
