--- a/styles/style.scss
+++ b/styles/style.scss
@@ -170,34 +170,34 @@ header {
 
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+
+    &__list {
+        list-style: none;
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    &__link {
+        color: inherit;
+        font-weight: var(--fw-bold);
+        font-size: var(--fs-h2);
+        text-decoration: none;
+
+        &:hover {
+            color: var(--clr-accent);
+        }
+    }
 }
 
 @media (min-width: 930px) {
     .nav {
         left: 70%;
     }
-}
-
-.nav__list {
-    list-style: none;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
-.nav__link {
-    color: inherit;
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-h2);
-    text-decoration: none;
-}
-
-.nav__link:hover {
-    color: var(--clr-accent);
 }
 
 .nav-toggle {
@@ -211,29 +211,26 @@ header {
     z-index: 1000;
 }
 
-.nav-open .nav {
-    transform: translateX(0);
-}
+.nav-open {
+    .nav {
+        transform: translateX(0);
+    }
 
-.nav-open .nav-toggle {
-    position: fixed;
-}
+    .nav-toggle {
+        position: fixed;
+    }
 
-.nav-open .hamburger {
-    transform: rotate(0.625turn);
-}
+    .hamburger {
+        transform: rotate(0.625turn);
 
-.nav-open .hamburger::before {
-    transform: rotate(90deg) translateX(-6px);
-}
+        &::before {
+            transform: rotate(90deg) translateX(-6px);
+        }
 
-.nav-open .hamburger::after {
-    opacity: 0;
-}
-
-.hamburger {
-    display: block;
-    position: relative;
+        &::after {
+            opacity: 0;
+        }
+    }
 }
 
 .hamburger,
@@ -246,19 +243,25 @@ header {
     transition: transform 250ms ease-in-out;
 }
 
-.hamburger::before,
-.hamburger::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-}
+.hamburger {
+    display: block;
+    position: relative;
 
-.hamburger::before {
-    top: 6px;
-}
-.hamburger::after {
-    bottom: 6px;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+    }
+
+    &::before {
+        top: 6px;
+    }
+
+    &::after {
+        bottom: 6px;
+    }
 }
 
 /****************
