--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,7 +55,13 @@ body {
 }
 
 section {
-    padding: 5em 2em;
+    padding: 3em 2em;
+}
+
+@media (min-width: 930px) {
+    section {
+        padding: 5em 2em;
+    }
 }
 
 :focus {
